--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.219.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@tailwindcss/forms": "^0.5.3",
     "eslint": "^8.40.0",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
