--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
-    "lucide-react": "^0.219.0",
+    "lucide-react": "^0.220.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/js-cookie": "^3.0.3",
     "eslint": "^8.40.0",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
